[project]
name = "my-package1"
version = "0.1.0"
description = ""
authors = [
    {name = "Amitha M D",email = "amithamd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry.dependencies]
my-helper-kit = {git = "https://github.com/amithasarath/my-helper-kit", rev="7cdac12ff01c2f4766a176e94af75046284475c7" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
