[project]
name = "my-package1"
version = "0.1.0"
description = ""
authors = [
    {name = "Amitha M D",email = "amithamd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
package-mode = true

[tool.poetry.dependencies]
my-helper-kit = {git = "https://github.com/amithasarath/my-helper-kit.git", rev = "27fe2284214b109e1fe44fe96c5578a974ec0dc4" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
