[project]
name = "my-package1"
version = "0.1.0"
description = ""
authors = [
    {name = "Amitha M D",email = "amithamd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
package-mode = true

[tool.poetry.dependencies]
my-helper-kit = {git = "https://github.com/amithasarath/my-helper-kit.git", rev = "2c3b2af325952704bce0a68cedbd9cd0da306199" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
